--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,15 @@ packages = [{include = "19"}]
 [tool.poetry.dependencies]
 python = "^3.12"
 django = "^5.0.6"
+black = "^24.4.2"
+pillow = "^10.3.0"
+ipython = "^8.25.0"
 
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.pytest.ini_options]
+DJANGO_SETTINGS_MODULE = "catalog.settings"
