--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,9 @@ django = "^5.0.6"
 black = "^24.4.2"
 pillow = "^10.3.0"
 ipython = "^8.25.0"
-static = "^1.1.1"
 pytils = "^0.4.1"
+psycopg2 = "^2.9.9"
+psycopg2-binary = "^2.9.9"
 
 
 [build-system]
