--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,12 +8,13 @@ packages = [{include = "19"}]
 
 [tool.poetry.dependencies]
 python = "^3.12"
-django = "^5.0.6"
 black = "^24.4.2"
 pillow = "^10.3.0"
 ipython = "^8.25.0"
 pytils = "^0.4.1"
 psycopg2 = "^2.9.9"
+django = "4.2.2"
+psycopg2-binary = "^2.9.9"
 
 
 
