--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ pytils = "^0.4.1"
 psycopg2 = "^2.9.9"
 django = "4.2.2"
 psycopg2-binary = "^2.9.9"
+redis = "^5.0.7"
+python-dotenv = "^1.0.1"
 
 
 
